apps/wotlk/accountmgr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wotlk-accountmgr
  namespace: wotlk
spec:
  selector:
    app: wotlk-worldserver
  ports:
    - name: http
      port: 80
      targetPort: accountmgr
