apps/wotlk/mariadb-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wotlk-mariadb-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: wotlk-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
