apps/wotlk/worldserver-soap-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wotlk-worldserver-soap-ingress
spec:
  podSelector:
    matchLabels:
      app: wotlk-worldserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grimguzzler-registration
      ports:
        - protocol: TCP
          port: 7878
